WTFA-11: Styleguide completed

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_buttons.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_buttons.scss
@@ -24,6 +24,7 @@
         text-transform: none;
         line-height: 1;
         color: inherit;
+        font-size: 24px;
 
         /* Better Font Rendering =========== */
         -webkit-font-smoothing: antialiased;
@@ -64,6 +65,7 @@
         text-transform: none;
         line-height: 1;
         color: inherit;
+        font-size: 24px;
 
         /* Better Font Rendering =========== */
         -webkit-font-smoothing: antialiased;
@@ -107,6 +109,7 @@
         text-transform: none;
         line-height: 1;
         color: inherit;
+        font-size: 24px;
 
         /* Better Font Rendering =========== */
         -webkit-font-smoothing: antialiased;
