--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_icons.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/global/_icons.scss
@@ -19,7 +19,8 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-
+  font-size: 24px;
+  
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
