WTFA-27: Testimonials updated

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -38,8 +38,8 @@
 // Components Scss
 @import './components/footer.scss';
 // Component Scss
-@import 'styles/leadspace.scss';
-@import 'styles/testimonials.scss';
+// @import 'styles/leadspace.scss';
+// @import 'styles/testimonials.scss';
 
 /** Extra layer of bootstrap Only */
 @import './../../node_modules/bootstrap/scss/containers';
