--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
@@ -1,7 +1,7 @@
 @import '../custom.scss';
 
 .testimonials {
-    margin: 20px;
+    padding: 20px;
     $this: '.testimonials';
     
     display: flex;
@@ -26,14 +26,18 @@
 
                 #{$this}__content {
                     border-left: 1px solid $neutral-100;
-                    padding-left: 30px;
+                    padding-left: 2rem;
                     display: flex;
                     flex-direction: column;
                     flex-grow: 1; 
-                    gap: 10px; 
+                    gap: 10px;
+
+                    @include media-breakpoint-up(sm) {
+                        padding-left: 5rem;
+                    }
 
                     .icon-quote {
-                        font-size: 33px;
+                        font-size: 50px;
                         padding-bottom: 20px;
                     }
 
@@ -79,20 +83,22 @@
 
             #{$this}__logo {
                 display: block !important;
-                max-width: 193px;
-                height: 47px;
-                padding-inline: 30px 50px;
+                max-width: 250px;
+                width: 100%;
+                height: 100%;
+                padding-inline: 0 4rem;
                 object-fit: contain;
             }
+
+            
         }
     }
 
     @include media-breakpoint-up(md){
         padding: 10rem 8rem;
-        #{$this}__item {
-            max-width: 1100px;
-           
-        }
+        // #{$this}__item {
+        //     max-width: 1100px;
+        // }
         .swiper-pagination {
             display: block !important;
             position: absolute;
