--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/custom.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/custom.scss
@@ -22,3 +22,20 @@
 @import './../../node_modules/bootstrap/scss/root';
 // Root scss
 @import './../../node_modules/bootstrap/scss/reboot';
+
+/** Extra layer of bootstrap Only */
+@import './../../node_modules/bootstrap/scss/containers';
+@import './../../node_modules/bootstrap/scss/grid';
+@import './../../node_modules/bootstrap/scss/buttons';
+@import './../../node_modules/bootstrap/scss/helpers';
+@import './../../node_modules/bootstrap/scss/list-group';
+@import './../../node_modules/bootstrap/scss/dropdown';
+@import './../../node_modules/bootstrap/scss/transitions';
+@import './../../node_modules/bootstrap/scss/modal';
+@import './../../node_modules/bootstrap/scss/accordion';
+@import './../../node_modules/bootstrap/scss/offcanvas';
+
+@import './../../node_modules/bootstrap/scss/images';
+@import './../../node_modules/bootstrap/scss/utilities';
+
+@import './../../node_modules/bootstrap/scss/utilities/api';
