dev: making refinements

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -43,7 +43,7 @@
 @import './styleguide.scss';
 @import './components/section-title.scss';
 
-@import 'styles/featured-projects.scss';
+@import './styles/featured-projects.scss';
 
 /** Extra layer of bootstrap Only */
 @import './../../node_modules/bootstrap/scss/containers';
