--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/department.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/department.scss
@@ -33,7 +33,7 @@
                 z-index: 2;   
                 display: flex;  
                 flex-direction: column;     
-                h2{
+                .h1{
                     width: 7ch;
                     margin-block: 10px;
                 }
