--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/tools/_mixins.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/tools/_mixins.scss
@@ -5,7 +5,7 @@
     
     gap: 2.5rem;
     // padding: 1rem 1.5rem;
-    padding: 1rem;
+    padding: 16px 24px;
 
     @media screen and (min-width: map.get($breakpoints, "mobile")) {
         gap: 4rem;
@@ -14,6 +14,7 @@
 
     @media screen and (min-width: map.get($breakpoints, "tablet")) {
         gap: 5.5rem;
+        padding: 22px 28px;
         // padding: 1.375rem 1.75rem;
     }
 }
