--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
@@ -3,12 +3,20 @@
     $self: ".header";
 
     padding-block: 1.5rem;
+    margin-inline: clamp(1.75rem, 1.75rem + 0.369vw, 5rem);
 
     &__logo-container {
-        width: clamp(85px, 10vw, 110px);
+        width: clamp(85px, 10vw, 120px);
+        height: clamp(33px, 10vw, 46.2px);
 
-        img {
+        a {
             width: 100%;
+            height: 100%;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 
@@ -18,9 +26,16 @@
         }
 
         #{$self}__emergency {
-            text-decoration: none;
             p {
                 margin-bottom: 0;
+            }
+
+            a {
+
+                .icon-phone-call {
+                    margin-right: 0.5rem;
+                    font-size: 1rem;
+                }
             }
         }
 
@@ -102,6 +117,7 @@
 
                             @include media-breakpoint-up(md) {
                                 width: max-content;
+                                gap: 12px;
                             }
                         }
 
@@ -113,6 +129,10 @@
                                 @include media-breakpoint-down(md) {
                                     padding-bottom: 0;
                                     border-bottom: none;
+                                }
+
+                                .nav-link {
+                                    max-width: 254px;
                                 }
                             }
                         }
