--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styleguide.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styleguide.scss
@@ -1,110 +1,234 @@
-.theme-main {
-    background-color: white;
-}
+
+@import './custom.scss';
 
 .styleguide {
-    &-wrap {
-        padding: 15px 15px 0;
+    padding-inline: 1rem;
+    padding-block: 2rem;
 
-        @media (min-width: 991px) {
-            padding: 45px 35px 0;
-        }
+    $self: ".styleguide";
+
+    &__header {
+        padding-block: 1rem;
+        border-bottom: 1px solid black;
+
+        // #{$self}__heading {
+        // }
     }
 
-    &-header {
-        border-bottom: 1px solid #d8d8d8;
-        padding: 0 0 20px;
+    .content {
+        display: flex;
+        margin-top: 2rem;
+        flex-direction: column;
 
-        h4 {
-            font-size: 35px;
-        }
-    }
-}
-
-.sidebar {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 5px;
-    padding-top: 35px;
-
-    .list-group-item {
-        border: none;
-        border-bottom: 1px solid #d8d8d8;
-        margin-bottom: 15px;
-        padding: 0 0 15px;
-
-        &::before {
-            display: none;
+        @media screen and (min-width: 500px) {
+            flex-direction: row;
         }
 
-        > a {
-            color: #3d4248;
-            text-decoration: none;
-            &:hover,
-            &:focus {
-                color: #000;
+        .sidebar {
+            $self: ".sidebar";
+
+            margin-right: 1rem;
+            margin-bottom: 1rem;
+            padding-right: 0.5rem;
+
+
+            @media screen and (min-width: 500px) {
+                max-height: 90vh;
+                flex-basis: 300px;
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
             }
-            &::after {
-                display: none;
+
+            &__list {
+                list-style: none;
+
+                #{$self}__item {
+                    padding-block: 0.8rem;
+                    border-bottom: 1px solid black;
+
+                    a {
+                        text-decoration: none;
+                        font-size: 1.8rem;
+                        line-height: 2rem;
+                    }
+                }
             }
-            &.active {
-                color: #000;
+        }
+
+        $self: ".styleguide";
+
+        #{$self} {
+            &__container {
+                padding-inline: 1rem;
+                flex-grow: 1;
+
+                .colors {
+                    $self: ".colors";
+                    border-bottom: 1px solid grey;
+
+                    &__header {
+                        width: max-content;
+                        margin-bottom: 2rem;
+                        position: relative;
+                    }
+
+                    &__container {
+
+                        #{$self}__row {
+                            display: grid;
+                            grid-template-columns: 1fr;
+                            gap: 2rem;
+                            margin-bottom: 3rem;
+
+                            @include media-breakpoint-up(sm){
+                                grid-template-columns: repeat(3, 1fr);
+                            }
+                            @include media-breakpoint-up(md){
+                                grid-template-columns: repeat(4, 1fr);
+                            }
+
+                        }
+
+                        #{$self}__card {
+                            flex-basis: 220px;
+                            border-radius: 10px;
+                            padding-inline: 0.8rem;
+                            padding-block: 1rem;
+                            color: #fff;
+                            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+                            &-body {
+                                margin-bottom: 1.5rem;
+
+                                >* {
+                                    display: block;
+                                }
+                            }
+
+                            code {
+                                background-color: rgba(0, 0, 0, .75);
+                                color: #ffc107;
+                                padding-inline: 8px;
+                                padding-block: 4px;
+                                border-radius: 5px;
+                            }
+                        }
+                    }
+                }
+
+                .typography {
+                    $self: ".typography";
+
+                    padding-bottom: 3rem;
+                    border-bottom: 1px solid grey;
+
+                    &__header {
+                        margin-block: 2rem;
+                    }
+
+                    &__container {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1.5rem;
+
+                        #{$self}__section {
+                            margin-top: 1rem;
+
+                            #{$self}__item {
+                                display: flex;
+                                flex-direction: column;
+                                gap: 1rem;
+                            }
+
+                            #{$self}__item:not(:last-child) {
+                                margin-block: 2rem;
+                            }
+                        }
+                    }
+                }
+
+                .icons {
+                    $self: ".icons";
+
+                    padding-bottom: 3rem;
+                    border-bottom: 1px solid grey;
+
+                    &__header {
+                        margin-block: 2rem;
+                    }
+
+                    &__container {
+                        display: grid;
+                        grid-template-columns: repeat(2, 1fr);
+                        gap: 4rem;
+
+                        @media screen and (min-width: 428px) {
+                            grid-template-columns: repeat(3, 1fr);
+                        }
+
+                        @media screen and (min-width: 990px) {
+                            grid-template-columns: repeat(6, 1fr);
+                        }
+                    }
+                }
+
+                .button {
+                    padding-bottom: 3rem;
+                    border-bottom: 1px solid grey;
+
+                    &__container {
+                        
+                        .buttons {
+                            display: flex;
+                            justify-content: space-around;
+                            margin-block: 1rem;
+                        }
+                    }
+                }
+
+                .texture {
+                    padding-bottom: 3rem;
+                    border-bottom: 1px solid grey;
+
+                    &__container {
+                        width: 50%;
+                        aspect-ratio: 1/1;
+
+                        code {
+                            background-color: rgba(0, 0, 0, .75);
+                            color: #ffc107;
+                            padding-inline: 8px;
+                            padding-block: 4px;
+                            border-radius: 5px;
+                            align-self: center;
+                        }
+                    }
+                }
+
+                .favicon {
+                    padding-bottom: 3rem;
+                    border-bottom: 1px solid grey;
+                    width: 100%;
+                    &__container {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+                        flex-wrap: wrap;
+                        gap: 2rem;
+                        img{
+                            width: 180px;
+                            &:nth-of-type(1){
+                                aspect-ratio: 20/9;
+                            }
+                            
+                            &:nth-of-type(2){
+                                aspect-ratio: 1/1;
+                            }
+                        }
+                    }
+                }
             }
         }
-    }
-}
-
-.content-wrap {
-    border-bottom: 1px solid #d8d8d8;
-    padding: 35px 0 75px;
-    margin-bottom: 25px;
-
-    &:last-of-type {
-        border: none;
-    }
-
-    code {
-        background-color: rgba(0, 0, 0, 0.75);
-        padding: 7px 8px;
-        border-radius: 4px;
-        color: #ffc107;
-        font-size: 15px;
-    }
-
-    pre {
-        background-color: #f6f7fb;
-        padding: 30px;
-        white-space: pre-wrap;
-        white-space: normal;
-        margin-bottom: 50px;
-
-        &:last-of-type {
-            margin-bottom: 0;
-        }
-
-        code {
-            display: block;
-            color: #ffc107;
-            padding: 15px;
-            white-space: normal;
-        }
-    }
-}
-
-.font-size {
-    &-5 {
-        font-size: 5px;
-    }
-
-    &-20 {
-        font-size: 20px;
-    }
-
-    &-25 {
-        font-size: 25px;
-    }
-    
-    &-30 {
-        font-size: 30px;
     }
 }
