--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/leadspace.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/leadspace.scss
@@ -1,7 +1,8 @@
 .leadspace{
+    // max-width: 100%;
     position: relative;
     overflow: hidden;
-    height: 100vh;
+    height: 90vh;
     &__image{
         width: 100%;
         height: 100%;
