--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/tools/_mixins.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/tools/_mixins.scss
@@ -3,37 +3,27 @@
 // Responsive mixin for buttons
 @mixin responsive-buttons {
     
-    height: 1.25rem;
     gap: 2.5rem;
-    padding: 1rem 1.5rem;
+    // padding: 1rem 1.5rem;
+    padding: 16px 24px;
 
     @media screen and (min-width: map.get($breakpoints, "mobile")) {
-        height: 1.375rem;
         gap: 4rem;
-        padding: 1.25rem 1.625rem;
+        // padding: 1.25rem 1.625rem;
     }
 
     @media screen and (min-width: map.get($breakpoints, "tablet")) {
-        height: 1.5rem;
         gap: 5.5rem;
-        padding: 1.375rem 1.75rem;
+        padding: 22px 28px;
+        // padding: 1.375rem 1.75rem;
     }
 }
 
 //Repsonsive mixin for tertiary buttons
 @mixin responsive-tertiary-buttons {
-    
-    height: 1.25rem;
+
     gap: 0.75rem;
     padding-block: 0.5rem;
-
-    @media screen and (min-width: map.get($breakpoints, "mobile")) {
-        height: 1.375rem;
-    }
-
-    @media screen and (min-width: map.get($breakpoints, "tablet")) {
-        height: 1.5rem;
-    }
 }
 
 // Mixin for responsive typography
@@ -64,4 +54,37 @@
     grid-template-columns: repeat($grid-columns, 1fr);
     margin-inline: $margin;
     grid-gap: $gutter;
-} 
+}
+
+// Mixin for selecting start and end elements of row of our-partners grid
+@mixin edge-row-selector($columns) {
+    $grid-end-width: clamp(1.75rem, 1.75rem + 0.369vw, 5rem);
+    &:nth-child(#{$columns}n + 1) {
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            height: 100%;
+            top: 0;
+            right: 100%;
+            border-top: 1px solid $neutral-100;
+            border-bottom: 1px solid $neutral-100;
+            width: $grid-end-width;
+        }
+    }
+    &:nth-child(#{$columns}n) {
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            height: 100%;
+            top: 0;
+            left: 100%;
+            border-top: 1px solid $neutral-100;
+            border-bottom: 1px solid $neutral-100;
+            width: $grid-end-width;
+        }
+    }
+}
