--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/features.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/features.scss
@@ -10,10 +10,10 @@
     }
     
     #{$this}__content{
-        // margin-top: 10rem;
+        margin-top: 3rem;
         margin-inline: 1.75rem;
         .body__content{
-            margin-block: 3rem;
+            margin-block: 4rem;
         }
     }
     .features__button{
