--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
@@ -99,6 +99,9 @@
         // #{$this}__item {
         //     max-width: 1100px;
         // }
+        #{$this}__logo{
+            margin-right: 30px;
+        }
         .swiper-pagination {
             display: block !important;
             position: absolute;
