--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
@@ -81,10 +81,11 @@
 
                 .navbar-nav {
                     width: 100%;
-                    margin-top: auto;
+                    margin-top: 6rem;
 
                     @include media-breakpoint-up(lg) {
                         gap: 40px;
+                        margin-top: auto;
                     }
 
                     .nav-item {
@@ -123,16 +124,13 @@
 
                         &-menu {
                             border: none;
+                            width: 254px;
 
                             .nav-item {
 
                                 @include media-breakpoint-down(md) {
                                     padding-bottom: 0;
                                     border-bottom: none;
-                                }
-
-                                .nav-link {
-                                    max-width: 254px;
                                 }
                             }
                         }
