WTFA-28 : end grid added

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/our-partners.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/our-partners.scss
@@ -68,6 +68,7 @@
             #{$self} {
 
                 &__image-container {
+                    box-sizing: border-box;
                     $columns: 3;
                     @include edge-row-selector($columns);
                 }
