--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/tools/_mixins.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/tools/_mixins.scss
@@ -73,6 +73,7 @@
         position: relative;
 
         &::before {
+            box-sizing: border-box;
             content: "";
             position: absolute;
             height: 100%;
@@ -87,6 +88,7 @@
         position: relative;
 
         &::before {
+            box-sizing: border-box;
             content: "";
             position: absolute;
             height: 100%;
