Main update by dev

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/app.scss
@@ -1,4 +1,3 @@
-
 // Common imports
 @import './common-imports';
 
@@ -44,6 +43,8 @@
 @import './components/section-title.scss';
 
 @import './styles/featured-projects.scss';
+
+@import './styles/history.scss';
 
 /** Extra layer of bootstrap Only */
 @import './../../node_modules/bootstrap/scss/containers';
