--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/tools/_mixins.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/tools/_mixins.scss
@@ -63,6 +63,7 @@
         position: relative;
 
         &::before {
+            box-sizing: border-box;
             content: "";
             position: absolute;
             height: 100%;
@@ -77,6 +78,7 @@
         position: relative;
 
         &::before {
+            box-sizing: border-box;
             content: "";
             position: absolute;
             height: 100%;
