--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
@@ -1,3 +1,8 @@
+@import '../custom.scss';
+@import '../../../node_modules/bootstrap/scss/dropdown';
+@import '../../../node_modules/bootstrap/scss/offcanvas';
+@import '../../../node_modules/bootstrap/scss/navbar';
+
 .header {
 
     $self: ".header";
@@ -99,6 +104,7 @@
 
                         .nav-link {
                             color: $neutral-600;
+                            text-decoration: none;
 
                             &:hover {
                                 background-color: $neutral-100;
