--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/history.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/history.scss
@@ -4,38 +4,33 @@
 
     $self: ".history";
 
-    padding-inline: 3rem 0;
-
     .h2 {
         margin-bottom: 6rem;
     }
+    display: flex;
+    flex-direction: column;
+    .container{
+        width: 80%;
+        margin-left: 1rem;
 
-    .historyswiper {
-        width: 100%;
-
-        .swiper-wrapper {
+        .history-swiper{
+            
             display: flex;
-            gap: 2.5rem;
-
-            .swiper-slide {
-
-                display: flex;
-                flex-direction: column;
-                gap: 2rem;
-
-                padding-bottom: 2rem;
-                // border-bottom: 1px solid $neutral-100;
-
+            #{$self}__container{
+                padding-right: 1.5rem;
+                margin-right: 1.5rem;
+                border-right: 1px solid $neutral-100;
                 .image-container {
                     width: 100%;
                     flex-grow: 1;
+                    padding-block: 1.5rem;
                     img {
                         width: 100%;
-                        aspect-ratio: 1/1;
+                        // height: 150px;
+                        aspect-ratio: 4/3;
                         object-fit: cover;
                     }
                 }
-
                 #{$self}__content{
                     width: 100%; 
                     display: -webkit-box; 
@@ -44,19 +39,55 @@
                     overflow: hidden;
                     text-overflow: ellipsis; /* Adds the ellipsis */
                 }
+                &:nth-last-child(1){
+                    border: none;
+                    padding-right: 0;
+                }
             }
-        }
-        .swiper-navigation {
-            margin-top: 4rem;
-            margin-left: 5rem;
-
-            display: flex;
-            gap: 1rem;
-
-            .btn-swiper-prev {
-                transform: rotate(180deg);
-            }
+            
         }
     }
+    .swiper-navigation {
+        margin-top: 4rem;
+        margin-left: 2rem;
+
+        display: flex;
+        gap: 1rem;
+
+        .btn-swiper-prev {
+            transform: rotate(180deg);
+        }
+    }
+    @include media-breakpoint-up(sm){
+        .container{
+            width: 60%;
+            .history-swiper {
+                height: 100%;
+
+                .swiper-wrapper {
+                    width: 100%;
+                    height: 100%;
+                    flex-direction: row;
+
+                    .swiper-slide {
+                        padding-inline: 3rem;
+
+                        width: 36%;
+                        height: 100%;
+
+                        padding-bottom: 0;
+                        border-bottom: none;
+
+                        border-right: 1px solid $neutral-100;
+                    }
+                }
+            }
+    
+        }
+        .swiper-navigation {
+            margin-left: 5rem;
+        }
+    }
+    
 }
 
