--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/featured-projects.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/featured-projects.scss
@@ -1,4 +1,4 @@
-@import './../custom.scss';
+@import '../custom.scss';
 
 .projects {
 
@@ -7,7 +7,7 @@
     padding: 3rem 1.75rem;
 
     .h2 {
-        margin-bottom: 6rem;
+        margin-bottom: 5rem;
     }
 
     .main-swiper {
@@ -19,20 +19,22 @@
             gap: 2.5rem;
 
             .swiper-slide {
-
-                display: flex;
-                flex-direction: column;
-                gap: 2rem;
+                width: 100%;
 
                 padding-bottom: 2rem;
                 border-bottom: 1px solid $neutral-100;
+
+                &:last-child {
+                    padding-bottom: 0;
+                    border-bottom: none;
+                }
 
                 .image-container {
                     width: 100%;
 
                     img {
                         width: 100%;
-                        aspect-ratio: 4 / 3;
+                        aspect-ratio: 16 / 10;
                         object-fit: cover;
                     }
                 }
@@ -45,14 +47,14 @@
     }
 }
 
-@include media-breakpoint-up (md) {
+@include media-breakpoint-up(md) {
     .projects {
-        padding-block: 5rem;
+        padding: 5rem 0;
 
         $self: ".partners";
 
         .h2 {
-            margin-bottom: 10rem;
+            margin-bottom: 7rem;
         }
 
         .main-swiper {
@@ -62,6 +64,7 @@
                 width: 100%;
                 height: 100%;
                 flex-direction: row;
+                gap: 0;
 
                 .swiper-slide {
                     padding-inline: 5rem;
@@ -73,6 +76,17 @@
                     border-bottom: none;
 
                     border-right: 1px solid $neutral-100;
+
+                    &:last-child {
+                        border-right: none;
+                    }
+
+                    .image-container {
+    
+                        img {
+                            aspect-ratio: 4 / 3;
+                        }
+                    }
                 }
             }
 
