--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/history.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/history.scss
@@ -23,10 +23,15 @@
                 // margin-right: 1.5rem;
                 border-right: 1px solid $neutral-100;
                 width: 282px;
+                #{$self}__heading{
+                    cursor: pointer;
+
+                }
                 .image-container {
                     width: 100%;
                     flex-grow: 1;
                     padding-block: 1.5rem;
+                    cursor: pointer;
                     img {
                         width: 100%;
                         // height: 150px;
@@ -35,16 +40,17 @@
                     }
                 }
                 #{$self}__content{
-                    width: 100%; 
-                        display: -webkit-box; 
-                        -webkit-box-orient: vertical;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                        /* Default: show only 1 paragraph */
-                        // -webkit-line-clamp: 3;
-                        p:not(:first-child) {
-                            display: none; /* Hide all paragraphs except the first */
-                        }
+                    width: 100%;
+                    cursor: pointer; 
+                    display: -webkit-box; 
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    /* Default: show only 1 paragraph */
+                    // -webkit-line-clamp: 3;
+                    p:not(:first-child) {
+                        display: none; /* Hide all paragraphs except the first */
+                    }
                 }
                 &:last-child{
                     border-right: none;
