--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
@@ -12,7 +12,6 @@
 
     &__logo-container {
         width: clamp(85px, 10vw, 120px);
-        height: clamp(33px, 10vw, 46.2px);
 
         a {
             width: 100%;
@@ -20,7 +19,7 @@
 
             img {
                 width: 100%;
-                height: 100%;
+                aspect-ratio: 12 / 5;
             }
         }
     }
@@ -98,7 +97,7 @@
                         text-wrap: nowrap;
 
                         @include media-breakpoint-down(md) {
-                            padding-bottom: 1.5rem;
+                            padding: 1.5rem;
                             border-bottom: 1px solid $neutral-100;
                         }
 
@@ -133,6 +132,11 @@
                         &-menu {
                             border: none;
                             width: 254px;
+
+                            padding: 1rem;
+                            display: flex;
+                            flex-direction: column;
+                            gap: 0.75rem;
 
                             .nav-item {
 
