--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/projects.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/projects.scss
@@ -1,7 +1,6 @@
 @import '../custom.scss';
 
 .recent__projects {
-    $self: ".recent__projects";
     padding: 3rem 1.75rem;
     .h2 {
         margin-bottom: 5rem;
@@ -23,15 +22,15 @@
             appearance: none;
         }
     }
-    .project-swiper {
+    .project-lists {
         width: 100%;
 
-        .swiper-wrapper {
+        .project-wrapper {
             display: flex;
             flex-direction: column;
             gap: 2.5rem;
 
-            .swiper-slide {
+            .projects__container {
                 width: 100%;
                 display: flex;
                 flex-direction: column;
@@ -57,12 +56,12 @@
                 gap: 32px;
             }
         }
-        .project-swiper{
-            .swiper-wrapper{
+        .project-lists{
+            .project-wrapper{
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
 
-                .swiper-slide{
+                .projects__container{
 
                     .projects__heading{
                         margin-top: 24px;
@@ -78,8 +77,8 @@
 
     }
     @include media-breakpoint-up(md){
-        .project-swiper{
-            .swiper-wrapper{
+        .project-lists{
+            .project-wrapper{
                 display: grid;
                 grid-template-columns: repeat(4, 1fr);
             }
