--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
@@ -4,10 +4,9 @@
 @import '../../../node_modules/bootstrap/scss/navbar';
 
 .header {
-
     $self: ".header";
 
-    padding-block: 1.5rem;
+    padding-block: 0.875rem;
     margin-inline: clamp(1.75rem, 1.75rem + 0.369vw, 5rem);
 
     &__logo-container {
@@ -132,16 +131,13 @@
                         &-menu {
                             border: none;
                             width: 254px;
-
                             padding: 1rem;
-                            display: flex;
-                            flex-direction: column;
                             gap: 0.75rem;
 
                             .nav-item {
+                                padding-bottom: 0.75rem;
 
                                 @include media-breakpoint-down(md) {
-                                    padding-bottom: 0;
                                     border-bottom: none;
                                 }
                             }
