--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/features.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/features.scss
@@ -23,9 +23,7 @@
     // about scss
     .img-padding{
         padding: 1.75rem;
-        aspect-ratio: 1/1;
-        
-
+        aspect-ratio: 1;
         object-fit: cover;
     }
 
@@ -49,7 +47,6 @@
                 width: 100%;
             }
             #{$this}__content{
-            
                 // height: 100%;
                 margin-block: auto;
             }
@@ -59,14 +56,11 @@
                 object-fit: cover;
             }
         }
-        
-        
-        
     }
 
     @include media-breakpoint-up(md){
         #{$this}__maincontainer{
-            gap: 50px;
+            gap: 3.125rem;
         }
     }
     @include media-breakpoint-up(lg){
@@ -76,10 +70,6 @@
             gap: 100px;
             #{$this}__imagecontainer{
                 height: 100%;
-            
-                // img{
-                //     height: 100%;
-                // }
             }
             
             #{$this}__content {
@@ -89,12 +79,6 @@
             }
             
         }
-        // .ms-5{
-        //     margin-left: 8%;
-        // }
-        // .me-5{
-        //     margin-right: 8%;
-        // }
         .img-padding{
             aspect-ratio: 6/5;
         }
