--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/our-leadership.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/our-leadership.scss
@@ -4,7 +4,7 @@
     padding: 3rem 1.75rem;
 
     @include media-breakpoint-up(md) {
-        padding: 5rem;
+        padding: 8rem;
     } 
 
     .h2 {
@@ -24,20 +24,21 @@
 
         .leader {
             padding-bottom: 1.5rem;
-            border-bottom: 1px solid $neutral-100;
+            border-bottom: 0.0625rem solid $neutral-100;
 
             &__image-container {
                 margin-bottom: 2rem;
                 
                 img {
                     aspect-ratio: 11 / 10;
+                    object-fit: cover;
                 }
             }
 
             &__details {
 
                 .sh1 {
-                    margin-bottom: 4px;
+                    margin-bottom: 0.25rem;
                 }
             }
         }
