--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/our-partners.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/our-partners.scss
@@ -10,7 +10,7 @@
     $self: ".partners";
 
     .grid-block {
-        border-inline: 1px solid $neutral-100;
+        border-inline: 0.0625rem solid $neutral-100;
         height: $grid-end-width;
     }
 
@@ -29,7 +29,7 @@
             &__image-container {
                 display: grid;
                 place-items: center;
-                border: 1px solid $neutral-100;
+                border: 0.0625rem solid $neutral-100;
                 cursor: pointer;
 
                 img {
