--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/stories.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/stories.scss
@@ -3,11 +3,18 @@
 .stories{
     margin-block: 7.5rem;
     margin-inline: 1.75rem;
-    .c1{
-        margin-bottom: 1.75rem;
-    }
-    .h5{
-        margin-bottom: 3rem;
+    
+    &__content{
+        .c1{
+            margin-bottom: 1.75rem;
+        }
+        .h5{
+            margin-bottom: 3rem;
+        }
+        a{
+            width: 11.25rem;
+            text-wrap: nowrap;
+        }
     }
 
     @include media-breakpoint-up(sm){
@@ -15,6 +22,10 @@
         .stories__content{
             border-left: 1px solid $neutral-100;
             padding-left: 5.5rem;
+
+            a{
+                width: 15rem;
+            }
         }
     }
     @include media-breakpoint-up(md){
