--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/department.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/department.scss
@@ -1,3 +1,6 @@
+
+@import '../custom.scss';
+
 .department{
     overflow: hidden;
     $this: '.department';
@@ -19,10 +22,7 @@
             &__overlay {
                 position: absolute;
                 z-index: 1;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
+                inset: 0;
             }
             
             &__content-head {
@@ -47,24 +47,25 @@
                 z-index: 2;
                 bottom: 7%;
                 right: 8%;
-                .btn-primary{
-                    // width: 52px;
-                    
-                }
             }
         }
         &:nth-of-type(2){
             #{$this}__content-head{
                 p{
                     order: -1;
+
+                    @include media-breakpoint-up(sm) {
+                        order: 0;
+                    }
                 }
             }
         }
     }
 
-    @media screen and (min-width: 768px) {
+    @include media-breakpoint-up(sm){
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        }
 
         &__details{
             #{$this}{
@@ -76,4 +77,3 @@
             }
         }
     }
-} 
