--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
@@ -41,9 +41,10 @@
                         padding-bottom: 20px;
                     }
 
-                    h5 {
+                    .h5 {
                         flex-grow: 1; 
-                        margin-bottom: 20px; 
+                        margin-bottom: 20px;
+                        font-family: 'Reckless Neue Book';
                     }
                 }
 
@@ -60,7 +61,6 @@
         .swiper-navigation {
             display: flex;
             gap: 10px;
-            // position: absolute;
             bottom: 0px; 
             justify-content: flex-end;
             right: 10%; 
@@ -68,7 +68,7 @@
             .btn-primary{
                 &-next, &-prev{
                     border: none;
-                    width: 48px;
+                    width: 3rem;
                     aspect-ratio: 1;
                 }
             }
@@ -89,6 +89,9 @@
                 padding-inline: 0 4rem;
                 object-fit: contain;
             }
+            #{$this}__name{
+                color: $neutral-100;
+            }
 
             
         }
@@ -96,11 +99,8 @@
 
     @include media-breakpoint-up(md){
         padding: 10rem 8rem;
-        // #{$this}__item {
-        //     max-width: 1100px;
-        // }
         #{$this}__logo{
-            margin-right: 30px;
+            margin-right: 1.875rem;
         }
         .swiper-pagination {
             display: block !important;
@@ -109,9 +109,8 @@
             left: 86%;
             width: 10%;
             height: 2px; /* Adjust the height of the progress bar if needed */
-            background-color: rgba(0, 0, 0, 0.2);
-
             &-progressbar{
+                
                 &-fill{
                     background-color: $primary-red;
                 }
